"Triangulate Face" crash in specific scene #37145

Closed
opened 2013-10-18 21:27:42 +02:00 by Andrey M · 7 comments

%%%--- Operating System, Graphics card ---
Linux Mint15x64, GXT570 (nvidia-325.15)
- Blender version with error, and version that worked ---

with error: (r60847), worked: ~2.66.1

- Short description of error ---

Blender fall after pressing [Ctrl+T] or selected by an over method "Triangulate Face" operation when all components of object from my scene are selected.

*.crash.txt attached too

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Open attached file.
  2. Press [Ctrl] + - combination

%%%

%%%--- Operating System, Graphics card --- Linux Mint15x64, GXT570 (nvidia-325.15) - Blender version with error, and version that worked --- with error: (r60847), worked: ~2.66.1 - Short description of error --- Blender fall after pressing [Ctrl+T] or selected by an over method "Triangulate Face" operation when all components of object from my scene are selected. *.crash.txt attached too - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Open attached file. 2. Press [Ctrl] + - [x] combination %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Guess that one is for you, Dalai. :)%%%

%%%Guess that one is for you, Dalai. :)%%%

%%%confirmed. I'll look at it%%%

%%%confirmed. I'll look at it%%%

%%%For the time being you can use the Triangulate Modifier. it works fine in your file%%%

%%%For the time being you can use the Triangulate Modifier. it works fine in your file%%%

%%%Attached a face from your file which reproduces the problem.
The crash is on line 695 of bmesh_polygon (an assert there)%%%

%%%Attached a face from your file which reproduces the problem. The crash is on line 695 of bmesh_polygon (an assert there)%%%

%%%fixed on rev. 60864
thanks for the report%%%

%%%fixed on rev. 60864 thanks for the report%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37145
No description provided.