fix [#37145] "Triangulate Face" crash in specific scene it was asserting if the last edge faces were already all set